mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright text
+	Adding changes before rebasimg conflicts
 -->
 <head>
 	<title>A very respectful website</title>
