mb Conflicting changes in simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!--
 	Copyright text
-	Adding changes before rebasimg conflicts
+	Silly changes
+	123 345
 -->
 <head>
 	<title>A very respectful website</title>
