local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -23,7 +23,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Amol Jadhav 2014</p>
+		<p>&copy; Demo change Amol Jadhav 2014</p>
 	</footer>
 </body>
 </html>
